Fix ugly truncation in main goupile assets dropdown

--- a/src/goupile/client/goupile.css
+++ b/src/goupile/client/goupile.css
@@ -161,6 +161,7 @@ body.busy > * { display: none !important; }
 
 #gp_assets {
     flex-grow: 1;
+    padding: 3px 22px 3px 2px;
     min-width: 5em;
     background: inherit;
     -webkit-appearance: none;
